--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JennPortfolio-Project</title>
+    <script src="https://kit.fontawesome.com/f6a55e185b.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,6 +14,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="box">
+        <h1>Hello World</h1>
+        <p>Hi there</p>
+        <i class="fa-brands fa-instagram"></i>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
