--- a/index.html
+++ b/index.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JennPortfolio-Project</title>
-    <script src="https://kit.fontawesome.com/f6a55e185b.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/f6a55e185b.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="box">
-        <h1>Hello World</h1>
-        <p>Hi there</p>
-        <i class="fa-brands fa-instagram"></i>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container-fluid">
+    <section class="hero-section">
+        <div class="container">
+          <a class="navbar-brand" href="#">JennMbonu</a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="container">
+          <div class="d-flex justify-content-center">
+            <div class="my-5 text-center">
+              <p class="card-text">Hi I am</p>
+              <h3 class="card-title">Jennifer Mbonu</h3>
+              <a href="#" class="btn btn-purple">Get Strated</a>
+            </div>
+          </div>
+        </div>
+
+    </section>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
