--- a/index.html
+++ b/index.html
@@ -18,35 +18,108 @@
   </head>
   <body>
     <div class="container-fluid">
-    <section class="hero-section">
+      <section class="hero-section">
         <div class="container">
-          <a class="navbar-brand" href="#">JennMbonu</a>
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">Contact</a>
-            </li>
-          </ul>
+          <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">JennMbonu</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav justify-content-end">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#">My Work</a>
+                  <a class="nav-link">Contact</a>
+                </div>
+              </div>
+            </div>
+          </nav>
         </div>
         <div class="container">
           <div class="d-flex justify-content-center">
-            <div class="my-5 text-center">
-              <p class="card-text">Hi I am</p>
+            <div class="hero-caption text-center">
+              <p class="card-text">👋 Hi I am</p>
               <h3 class="card-title">Jennifer Mbonu</h3>
-              <a href="#" class="btn btn-purple">Get Strated</a>
+              <p class="hero-subtitle">Frontend Developer, based in Lagos.</p>
+              <a href="#" class="btn btn-purple">Get Started</a>
             </div>
           </div>
         </div>
-
-    </section>
+      </section>
+      <section class="my-5">
+        <div class="container">
+          <p>Featured Project which my best projects be choice to show</p>
+          <div class="row justify-content-center align-items-center my-5">
+            <div class="col-md-6">
+              <img
+                class="img-fluid"
+                src="/images/realYorghurt.png"
+                alt="Yoga Project"
+              />
+            </div>
+            <div class="col-md-6">
+              <h2 class="text-sm-justify">Yoghurt App</h2>
+              <p class="mt-3 work-para text-sm-start">
+                Far far away, behind the word mountains far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics,
+                a large language ocean. A small river named Duden flows by
+              </p>
+              <a class="yoga-link" title="Yoghurt App">Learn More</a>
+            </div>
+          </div>
+          <div class="row justify-content-center align-items-center my-5">
+            <div class="col-md-6">
+              <img
+                class="img-fluid"
+                src="/images/weather.png"
+                alt="Yoga Project"
+              />
+            </div>
+            <div class="col-md-6">
+              <h2 class="text-sm-justify">Weather App</h2>
+              <p class="mt-3 work-para text-sm-start">
+                Far far away, behind the word mountains far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics,
+                a large language ocean. A small river named Duden flows by
+              </p>
+              <a class="yoga-link" title="Yoghurt App">Learn More</a>
+            </div>
+          </div>
+          <div class="row justify-content-center align-items-center my-5">
+            <div class="col-md-6">
+              <img
+                class="img-fluid"
+                src="/images/imagesdictionary.png"
+                alt="Yoga Project"
+              />
+            </div>
+            <div class="col-md-6">
+              <h2 class="text-sm-justify">Dictionary App</h2>
+              <p class="mt-3 work-para text-sm-start">
+                Far far away, behind the word mountains far from the countries
+                Vokalia and Consonantia, there live the blind texts. Separated
+                they live in Bookmarksgrove right at the coast of the Semantics,
+                a large language ocean. A small river named Duden flows by
+              </p>
+              <a class="yoga-link" title="Yoghurt App">Learn More</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
