email and social icons

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       </section>
       <section class="my-5">
         <div class="container">
-          <p>Featured Project which my best projects be choice to show</p>
+          <p class="text-center">
+            Featured Project which my best projects be choice to show
+          </p>
           <div class="row justify-content-center align-items-center my-5">
             <div class="col-md-6">
               <img
@@ -116,6 +118,30 @@
                 a large language ocean. A small river named Duden flows by
               </p>
               <a class="yoga-link" title="Yoghurt App">Learn More</a>
+            </div>
+          </div>
+          <div class="card enquiry-box">
+            <div class="row ps-4 justify-content-center align-items-center">
+              <div class="col-md-9">
+                <h2>Work Inquiry</h2>
+                <p class="work-para">
+                  Let’s work together and i’ll help you by all my best
+                </p>
+              </div>
+              <div class="col-md-3">
+                <a class="footer-link" title="learn More">Let's talk here</a>
+              </div>
+            </div>
+          </div>
+          <div class="text-center my-5">
+            <p>Mbonujennifer.jm@gmail.com</p>
+            <div class="d-flex justify-content-center align-items-center">
+              <div
+                class="circle"
+              >
+                <i class="fa-brands fa-instagram social-icon"></i>
+              </div>
+
             </div>
           </div>
         </div>
