--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">JennMbonu</a>
+              <a class="navbar-brand navbarBrand" href="#">JennMbonu</a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -34,8 +34,8 @@
               >
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav justify-content-end">
+              <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#"
                     >Home</a
                   >
@@ -83,14 +83,14 @@
             </div>
           </div>
           <div class="row justify-content-center align-items-center my-5">
-            <div class="col-md-6">
+            <div class="col-md-6 order-md-2">
               <img
                 class="img-fluid"
                 src="/images/weather.png"
                 alt="Yoga Project"
               />
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-md-1">
               <h2 class="text-sm-justify">Weather App</h2>
               <p class="mt-3 work-para text-sm-start">
                 Far far away, behind the word mountains far from the countries
@@ -136,6 +136,16 @@
           <div class="text-center my-5">
             <p>Mbonujennifer.jm@gmail.com</p>
             <div class="d-flex justify-content-center align-items-center">
+              <div
+                class="circle"
+              >
+                <i class="fa-brands fa-twitter social-icon"></i>
+              </div>
+              <div
+                class="circle"
+              >
+                <i class="fa-brands fa-linkedin social-icon"></i>
+              </div>
               <div
                 class="circle"
               >
