--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
       <section class="hero-section">
         <div class="container">
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -39,9 +39,9 @@
                   <a class="nav-link active" aria-current="page" href="#"
                     >Home</a
                   >
-                  <a class="nav-link" href="#">About</a>
-                  <a class="nav-link" href="#">My Work</a>
-                  <a class="nav-link">Contact</a>
+                  <a class="nav-link" href="#about">About</a>
+                  <a class="nav-link" href="#work">My Work</a>
+                  <a class="nav-link" href="#contact">Contact</a>
                 </div>
               </div>
             </div>
@@ -53,12 +53,12 @@
               <p class="card-text">👋 Hi I am</p>
               <h3 class="card-title">Jennifer Mbonu</h3>
               <p class="hero-subtitle">Frontend Developer, based in Lagos.</p>
-              <a href="#" class="btn btn-purple">Get Started</a>
+              <a href="#contact" class="btn btn-purple">Contact Me</a>
             </div>
           </div>
         </div>
       </section>
-      <section class="my-5">
+      <section class="my-5" id="work">
         <div class="container">
           <p class="text-center">
             Featured Project which my best projects be choice to show
@@ -133,7 +133,7 @@
               </div>
             </div>
           </div>
-          <div class="text-center my-5">
+          <div class="text-center my-5" id="contact">
             <p>Mbonujennifer.jm@gmail.com</p>
             <div class="d-flex justify-content-center align-items-center">
               <div
