--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a class="nav-link active" aria-current="page" href="index.html"
                     >Home</a
                   >
-                  <a class="nav-link" href="#about">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                   <a class="nav-link" href="#work">My Work</a>
                   <a class="nav-link" href="#contact">Contact</a>
                 </div>
