--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <div class="container-fluid px-0">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand navbarBrand" href="#">JennMbonu</a>
+          <a class="navbar-brand navbarBrand" href="/index.html">JennMbonu</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -37,10 +37,10 @@
             id="navbarNavAltMarkup"
           >
             <div class="navbar-nav">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link active" href="about.html">About</a>
-              <a class="nav-link" href="#work">My Work</a>
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link active" href="/about.html">About</a>
+              <a class="nav-link" href="/work.html">My Work</a>
+              <a class="nav-link" href="/contact.html">Contact</a>
             </div>
           </div>
         </div>
