--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand navbarBrand" href="#">JennMbonu</a>
+              <a class="navbar-brand navbarBrand" href="/index.html">JennMbonu</a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -36,12 +36,12 @@
               </button>
               <div class="collapse navbar-collapse justify-content-end align-items-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="index.html"
+                  <a class="nav-link active" aria-current="page" href="/index.html"
                     >Home</a
                   >
-                  <a class="nav-link" href="about.html">About</a>
-                  <a class="nav-link" href="#work">My Work</a>
-                  <a class="nav-link" href="#contact">Contact</a>
+                  <a class="nav-link" href="/about.html">About</a>
+                  <a class="nav-link" href="/work.html">My Work</a>
+                  <a class="nav-link" href="/contact.html">Contact</a>
                 </div>
               </div>
             </div>
