--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,38 @@
           </div>
         </div>
       </nav>
+      <div class="container">
+        <div class="row addMargin">
+          <h2 class="text-sm-justify headingAbout">Let's get in touch!</h2>
+        </div>
+        <div class="card enquiry-box">
+          <div class="row ps-4 justify-content-center align-items-center">
+            <div class="col-md-9">
+              <h2>Work Inquiry</h2>
+              <p class="work-para">
+                Let’s work together and i’ll help you by all my best
+              </p>
+            </div>
+            <div class="col-md-3">
+              <a class="footer-link" title="learn More">Let's talk here</a>
+            </div>
+          </div>
+        </div>
+        <div class="text-center my-5" id="contact">
+          <p>Mbonujennifer.jm@gmail.com</p>
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="circle">
+              <i class="fa-brands fa-twitter social-icon"></i>
+            </div>
+            <div class="circle">
+              <i class="fa-brands fa-linkedin social-icon"></i>
+            </div>
+            <div class="circle">
+              <i class="fa-brands fa-instagram social-icon"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
