--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
     <div class="container-fluid px-0">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand navbarBrand" href="#">JennMbonu</a>
+          <a class="navbar-brand navbarBrand" href="/index.html">JennMbonu</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -47,6 +47,83 @@
           </div>
         </div>
       </nav>
+      <div class="container">
+        <div class="row my-5">
+          <div class="col-md-7 col-sm-12">
+            <h2 class="text-sm-justify headingAbout">
+              Take a look at what I've been working on!
+            </h2>
+          </div>
+          <div class="col-md-5 col-sm-12"></div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-sm-12 text-sm-center">
+            <img
+              class="img-fluid"
+              src="/images/realYorghurt.png"
+              alt="Yoghurt Project"
+            />
+            <p class="hero-subtitle mt-3">Yoghurt Project</p>
+            <p class="mt-1 work-para">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 col-sm-12 text-sm-center">
+            <img
+              class="img-fluid"
+              src="/images/weather.png"
+              alt="Weather Project"
+            />
+            <p class="hero-subtitle mt-3">Weather Project</p>
+            <p class="mt-1 work-para">Built with HTML, CSS JavaScript</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-sm-12 text-sm-center">
+            <img
+              class="img-fluid"
+              src="/images/imagesdictionary.png"
+              alt="Dictionary Project"
+            />
+            <p class="hero-subtitle mt-3">Dictionary App</p>
+            <p class="mt-1 work-para">Built with HTML, CSS with React</p>
+          </div>
+          <div class="col-md-6 col-sm-12 text-sm-center">
+            <img
+              class="img-fluid"
+              src="/images/Translation.png"
+              alt="Translation Project"
+            />
+            <p class="hero-subtitle mt-3">Translation Project</p>
+            <p class="mt-1 work-para">Built with HTML, CSS with React</p>
+          </div>
+        </div>
+        <div class="card enquiry-box">
+          <div class="row ps-4 justify-content-center align-items-center">
+            <div class="col-md-9">
+              <h2>Work Inquiry</h2>
+              <p class="work-para">
+                Let’s work together and i’ll help you by all my best
+              </p>
+            </div>
+            <div class="col-md-3">
+              <a class="footer-link" title="learn More">Let's talk here</a>
+            </div>
+          </div>
+        </div>
+        <div class="text-center my-5" id="contact">
+          <p>Mbonujennifer.jm@gmail.com</p>
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="circle">
+              <i class="fa-brands fa-twitter social-icon"></i>
+            </div>
+            <div class="circle">
+              <i class="fa-brands fa-linkedin social-icon"></i>
+            </div>
+            <div class="circle">
+              <i class="fa-brands fa-instagram social-icon"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
